--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -10,6 +10,7 @@
     backface-visibility: hidden;
     transform: translateZ(0);
     transition: transform 0.25s ease-out;
+    max-width: 240px;
 }
 
 .card-container:hover {
